--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,16 @@ body {
   background-color: var(--color-background);
 }
 
+.visually-hidden:not(:focus):not(:active) {
+  clip: rect(0 0 0 0); 
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap; 
+  width: 1px;
+}
+
 .list {
   list-style: none;
 }
