--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,8 @@
   --color-background: #fff;
   --color-order-button-foreground: #fff;
   --color-order-button-background: #4d5ae5;
-  --color-filter-button-foreground: #4d5ae5;
-  --color-filter-button-background: #f4f4fd;
+  --color-portfolio-filter-button-foreground: #4d5ae5;
+  --color-portfolio-filter-button-background: #f4f4fd;
   --color-button-hover-foreground: #ffffff;
   --color-button-hover-background: #404bbf;
   --color-link-hover-foreground: #404bbf;
@@ -46,6 +46,8 @@
   --text-transform-heading: capitalize;
   --text-transform-button: capitalize;
   --text-transform-item-role: capitalize;
+
+  --list-item-gap: 24px;
 }
 
 body {
@@ -78,7 +80,7 @@ ul {
 }
 
 .container {
-  width: 1158px;
+  max-width: 1158px;
   margin: 0 auto;
   padding-inline: 15px;
 }
@@ -88,32 +90,141 @@ ul {
   justify-content: space-between;
   padding-block: 24px;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .header-wrapper > .navigation-links {
   display: flex;
   gap: 76px;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .header-wrapper > .navigation-links > .navigation-menu {
   display: flex;
   gap: 40px;
+  flex-wrap: wrap;
 }
 
 .header-wrapper > .address > .contact-links {
   display: flex;
   gap: 40px;
+  flex-wrap: wrap;
 }
 
-.footer > .footer-wrapper {
-  padding-block: 100px;
-  margin-right: auto;
+.strengths-section .strengths-list {
+  display: flex;
+  gap: var(--list-item-gap);
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-.footer > .footer-wrapper > .footer-text {
-  width: 264px;
-  margin-top: 16px;
+.strengths-list > .strengths-list-item {
+  flex-basis: calc((100% - 3 * var(--list-item-gap)) / 4);
+}
+
+.strengths-list > .strengths-list-item .item-heading {
+  margin-bottom: 8px;
+}
+
+.work-section .work-list {
+  display: flex;
+  gap: var(--list-item-gap);
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.work-list > .work-list-item {
+  flex-basis: calc((100% - 2 * var(--list-item-gap)) / 3);
+}
+
+.team-section .team-list {
+  display: flex;
+  gap: var(--list-item-gap);
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.team-list > .team-list-item {
+  flex-basis: calc((100% - 3 * var(--list-item-gap)) / 4);
+  border-radius: 0px 0px 4px 4px;
+  /* box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08); */
+}
+
+.team-list > .team-list-item .item-content {
+  padding: 32px 16px;
+}
+
+.team-list > .team-list-item .item-content > .item-heading {
+  margin-bottom: 8px;
+}
+
+.portfolio-section .portfolio-filter-list {
+  display: flex;
+  gap: var(--list-item-gap);
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-bottom: 72px;
+}
+
+.portfolio-section .portfolio-list {
+  display: flex;
+  column-gap: var(--list-item-gap);
+  row-gap: calc(2 * var(--list-item-gap));
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.portfolio-list > .portfolio-list-item {
+  flex-basis: calc((100% - 2 * var(--list-item-gap)) / 3);
+}
+
+.portfolio-list > .list-item .item-content {
+  padding: 32px 16px;
+  border: 1px solid var(--color-border);
+  border-top: 0;
+}
+
+.portfolio-list > .portfolio-list-item .item-content > .item-heading {
+  margin-bottom: 8px;
+}
+
+.work-section .section-heading,
+.team-section .section-heading {
+  margin-bottom: 72px;
+}
+
+.section {
+  background-color: var(--color-background);
+  padding-block: 120px;
+}
+
+.section.main-page-main-section {
+  background-color: var(--color-main-page-main-section);
+  padding-block: 188px;
+}
+
+.section.work-section {
+  padding-top: 0;
+}
+
+.section.team-section {
+  background-color: var(--color-team-section-background);
+}
+
+.section.portfolio-section {
+  padding-top: 96px;
+}
+
+.item-image {
+  display: block;
 }
 
 .list {
@@ -132,16 +243,22 @@ ul {
   line-height: var(--line-height-text);
   letter-spacing: var(--letter-spacing-button);
   text-align: center;
-}
-
-.filter-list .btn {
-  color: var(--color-filter-button-foreground);
-  background-color: var(--color-filter-button-background);
+  padding: 16px 32px;
+  border-radius: 4px;
+  border: 0;
 }
 
 .main-page-main-section .btn {
   color: var(--color-order-button-foreground);
   background-color: var(--color-order-button-background);
+  display: block;
+  margin: 48px auto 0;
+}
+
+.portfolio-filter-list .btn {
+  color: var(--color-portfolio-filter-button-foreground);
+  background-color: var(--color-portfolio-filter-button-background);
+  border: 1px solid var(--color-border);
 }
 
 .btn:hover,
@@ -149,6 +266,24 @@ ul {
 .btn:active {
   color: var(--color-button-hover-foreground);
   background-color: var(--color-button-hover-background);
+}
+
+.portfolio-filter-list .btn:hover,
+.portfolio-filter-list .btn:focus,
+.portfolio-filter-list .btn:active {
+  border: 1px solid var(--color-button-hover-background);
+  /* box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
+    0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1); */
+}
+
+/* .main-page-main-section .btn:hover,
+.main-page-main-section .btn:focus,
+.main-page-main-section .btn:active {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+} */
+
+.address {
+  font-style: normal;
 }
 
 .link:hover,
@@ -160,10 +295,6 @@ ul {
 .link {
   text-decoration: none;
   line-height: var(--line-height-text);
-}
-
-.address {
-  font-style: normal;
 }
 
 .navigation-link {
@@ -197,10 +328,6 @@ ul {
   color: var(--color-brand-accent);
 }
 
-.footer {
-  background-color: var(--color-footer-background);
-}
-
 .heading {
   color: var(--color-heading);
   letter-spacing: var(--letter-spacing-text);
@@ -225,6 +352,8 @@ ul {
   font-weight: var(--font-weight-main-heading);
   line-height: var(--line-height-main-heading);
   letter-spacing: var(--letter-spacing-text);
+  max-width: 496px;
+  margin-inline: auto;
 }
 
 .main-page-main-section .section-heading {
@@ -249,26 +378,25 @@ ul {
   text-align: center;
 }
 
-.section {
-  background-color: var(--color-background);
-  padding: 120px 0;
-}
-
-.section.main-page-main-section {
-  background-color: var(--color-main-page-main-section);
-}
-
-.section.team-section {
-  background-color: var(--color-team-section-background);
-}
-
 .header {
   background-color: var(--color-background);
+  border-bottom: 1px solid var(--color-border);
 }
 
-.footer .footer-text {
+.footer {
+  background-color: var(--color-footer-background);
+}
+
+.footer > .footer-wrapper {
+  padding-block: 100px;
+  margin-right: auto;
+}
+
+.footer > .footer-wrapper > .footer-text {
   color: var(--color-footer-text);
   font-size: var(--font-size-text);
   line-height: 1.5;
   letter-spacing: var(--letter-spacing-text);
+  max-width: 264px;
+  margin-top: 16px;
 }
